--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@ h1 {
     @apply mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl dark:text-white text-slate-600
 }
 
-h2{
+h2 {
     @apply text-4xl font-bold dark:text-white mb-2 mt-3 text-slate-600
 }
 
@@ -32,5 +32,5 @@ h5 {
 
 
 h6 {
-    @apply text-lg font-bold dark:text-white mb-2 mt-3 text-slate-600
+    @apply text-sm font-bold dark:text-white mb-2 mt-3 text-slate-600
 }
