--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -125,6 +125,13 @@
         ></app-multi-picker>
     </div>
 
+
+    <app-section-title [title]="'Acknowledgements'"></app-section-title>
+    <app-multi-field
+            (change)="debounceInput$.next({type: 'acknowledge', value: $event})"
+            [fields]="['Name', 'Description', 'Url']"
+    ></app-multi-field>
+
     <app-section-title [title]="'Contributions'"></app-section-title>
 
     <div class="flex flex-col">
