- added ngrx action/reducers for the form inputs

--- a/src/app/components/form-field/form-field.component.html
+++ b/src/app/components/form-field/form-field.component.html
@@ -7,9 +7,10 @@
 
 <ng-template #textareaTemplate>
     <textarea
+            (keyup)="inputChange($event)"
             [(ngModel)]="value"
-            [disabled]="disabled"
-            [placeholder]="placeholder"
+            [disabled]="disabled" [placeholder]="placeholder"
             class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-            rows="4"></textarea>
+            rows="4"
+            x></textarea>
 </ng-template>
