--- a/src/app/components/multi-field/multi-field.component.html
+++ b/src/app/components/multi-field/multi-field.component.html
@@ -21,7 +21,7 @@
     </div>
     <div class="flex items-center justify-center">
         <button (click)="addEntry()"
-                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-1 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-md text-sm p-1 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
                 type="button">
             <svg aria-hidden="true" class="size-4" fill="none"
                  height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
