--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -115,6 +115,10 @@
         [title]="'Add Tech Stack'"
     ></app-form-checkbox>
 
+    <!--    <app-section-title [title]="'Setup'"></app-section-title>-->
+    <!--    <h5>Installation</h5>-->
+
+
     <div [ngClass]="techStack.value? '' : 'hidden'"
          class="flex flex-col">
 
@@ -198,16 +202,14 @@
 
 </div>
 <button (click)="generateMarkdown()"
-        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+        class="text-white gap-2 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
         type="button">
-    <svg class="mr-2" fill="none" height="20" stroke="#fff" stroke-linecap="round" stroke-linejoin="round"
-         stroke-width="1.5"
-         viewBox="0 0 24 24" width="20">
-        <path d="M0 0h24v24H0z" fill="none" stroke="none"/>
-        <path d="M17 17m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0"/>
-        <path d="M17 13v4h6"/>
-        <path d="M12 3v4a1 1 0 0 0 1 1h6"/>
-        <path d="M11.5 21h-6.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v2m0 3v4"/>
+    <svg aria-hidden="true" class="w-5 h-5" fill="none" height="24" viewBox="0 0 24 24"
+         width="24">
+        <path d="M18 5V4a1 1 0 0 0-1-1H8.914a1 1 0 0 0-.707.293L4.293 7.207A1 1 0 0 0 4 7.914V20a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-5M9 3v4a1 1 0 0 1-1 1H4m11.383.772 2.745 2.746m1.215-3.906a2.089 2.089 0 0 1 0 2.953l-6.65 6.646L9 17.95l.739-3.692 6.646-6.646a2.087 2.087 0 0 1 2.958 0Z"
+              stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+              stroke-width="2"/>
     </svg>
     Generate
 </button>
+<div class="mb-20"></div>
