--- a/src/app/components/multi-field/multi-field.component.html
+++ b/src/app/components/multi-field/multi-field.component.html
@@ -4,6 +4,7 @@
             <app-form-field
                     (valueChange)="assignValue($event, k, e)"
                     [placeholder]="field"
+                    [textarea]="textarea"
                     class="flex-grow"
             ></app-form-field>
         </ng-container>
