- added value input support for multifield component

--- a/src/app/components/multi-field/multi-field.component.html
+++ b/src/app/components/multi-field/multi-field.component.html
@@ -5,6 +5,7 @@
                     (valueChange)="assignValue($event, k, e)"
                     [placeholder]="field"
                     [textarea]="textarea"
+                    [value]="entry.name[k]"
                     class="flex-grow"
             ></app-form-field>
         </ng-container>
