--- a/src/app/components/form-checkbox/form-checkbox.component.html
+++ b/src/app/components/form-checkbox/form-checkbox.component.html
@@ -16,9 +16,10 @@
         <label class="inline-flex items-center cursor-pointer">
             <input
                     (change)="checkboxChange($event)"
+                    [attr.checked]="value"
                     [disabled]="disabled"
                     [id]="id"
-                    class="sr-only peer" type="checkbox" value="">
+                    class="sr-only peer" type="checkbox">
             <div [ngClass]="disabled? 'peer-checked:bg-gray-200' : 'peer-checked:bg-blue-600'"
                  class="ring-1 ring-gray-300 relative w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600"></div>
             <span [ngClass]="disabled? 'text-slate-400' : 'text-slate-600'"
