- fixed checkbox/toggle for null values

--- a/src/app/components/form-checkbox/form-checkbox.component.html
+++ b/src/app/components/form-checkbox/form-checkbox.component.html
@@ -16,7 +16,7 @@
         <label class="inline-flex items-center cursor-pointer">
             <input
                     (change)="checkboxChange($event)"
-                    [attr.checked]="value"
+                    [attr.checked]="value? value: null"
                     [disabled]="disabled"
                     [id]="id"
                     class="sr-only peer" type="checkbox">
