--- a/src/app/components/form-radio/form-radio.component.html
+++ b/src/app/components/form-radio/form-radio.component.html
@@ -4,6 +4,7 @@
         <div class="flex items-center ps-3">
             <input
                     (change)="radioChange($event)"
+                    [attr.checked]="value === option.value? true: null"
                     [id]="option.value"
                     [value]="option.value"
                     class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-700 dark:focus:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500"
