- added value input support to multi-picker component

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -139,6 +139,7 @@
         <app-multi-picker
                 (selectedItemsChange)="selectedTechnologies($event)"
                 [items]="technologies"
+                [value]="(stack$ | async)!"
                 title="technologies"
         ></app-multi-picker>
     </div>
