- added icon support to section title

--- a/src/app/components/section-title/section-title.component.html
+++ b/src/app/components/section-title/section-title.component.html
@@ -1,3 +1,7 @@
-<div class="mt-7 border-b pb-1.5 border-slate-400">
-    <p class="ml-2 text-2xl font-semibold text-slate-700">{{ title }}</p>
+<div class="mt-7 border-b pb-1.5 border-slate-400 flex items-center">
+    <app-svg-icon [type]="iconType"></app-svg-icon>
+    <p class="ml-2 text-2xl font-semibold text-slate-700">
+
+        {{ title }}
+    </p>
 </div>
