--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,5 +1,5 @@
 <div class="overflow-auto p-4">
-    <app-section-title [title]="'About'"></app-section-title>
+    <app-section-title [iconType]="'info'" [title]="'About'"></app-section-title>
     <small>Information about your project</small>
 
     <div class="flex flex-col">
@@ -31,7 +31,7 @@
         ></app-form-field>
     </div>
 
-    <app-section-title [title]="'Navigation'"></app-section-title>
+    <app-section-title [iconType]="'list'" [title]="'Navigation'"></app-section-title>
     <small>Documentation navigation</small>
 
     <app-form-checkbox
@@ -46,14 +46,14 @@
             [value]="navigationLinks$ | async"
     ></app-form-checkbox>
 
-    <app-section-title [title]="'Features'"></app-section-title>
+    <app-section-title [iconType]="'star'" [title]="'Features'"></app-section-title>
     <app-multi-field
             (valueChange)="debounceInput$.next({type: 'features', value: $event})"
             [fields]="['Name', 'Feature description']"
             [value]="features$ | async"
     ></app-multi-field>
 
-    <app-section-title [title]="'Repositories'"></app-section-title>
+    <app-section-title [iconType]="'github'" [title]="'Repositories'"></app-section-title>
     <small>Source code information</small>
 
     <div class="flex flex-col">
@@ -92,7 +92,7 @@
             [value]="npmBadges$ | async"
     ></app-form-checkbox>
 
-    <app-section-title [title]="'Images'"></app-section-title>
+    <app-section-title [iconType]="'image'" [title]="'Images'"></app-section-title>
     <small>Project showcase</small>
 
     <div class="flex flex-col">
@@ -124,7 +124,7 @@
 
     </div>
 
-    <app-section-title [title]="'Technologies'"></app-section-title>
+    <app-section-title [iconType]="'layers'" [title]="'Technologies'"></app-section-title>
 
     <app-form-checkbox
         #techStack
@@ -144,7 +144,7 @@
         ></app-multi-picker>
     </div>
 
-    <app-section-title [title]="'Setup'"></app-section-title>
+    <app-section-title [iconType]="'rect-list'" [title]="'Setup'"></app-section-title>
     <small>Add instructions to run the project...</small>
 
     <h6>Installation</h6>
@@ -170,14 +170,14 @@
             [value]="parameters$ | async"
     ></app-multi-field>
 
-    <app-section-title [title]="'Acknowledgements'"></app-section-title>
+    <app-section-title [iconType]="'award'" [title]="'Acknowledgements'"></app-section-title>
     <app-multi-field
             (valueChange)="debounceInput$.next({type: 'acknowledge', value: $event})"
             [fields]="['Name', 'Description', 'Url']"
             [value]="acknowledgements$ | async"
     ></app-multi-field>
 
-    <app-section-title [title]="'Contributions'"></app-section-title>
+    <app-section-title [iconType]="'user-group'" [title]="'Contributions'"></app-section-title>
     <small>Who helped build the project</small>
 
     <div class="flex flex-col">
@@ -203,7 +203,7 @@
         ></app-multi-field>
     </div>
 
-    <app-section-title [title]="'Author'"></app-section-title>
+    <app-section-title [iconType]="'user-circle'" [title]="'Author'"></app-section-title>
     <small>Who is the author</small>
 
     <div class="flex flex-col">
@@ -225,7 +225,7 @@
         ></app-form-field>
     </div>
 
-    <app-section-title [title]="'License'"></app-section-title>
+    <app-section-title [iconType]="'book'" [title]="'License'"></app-section-title>
     <small>Add your project license</small>
 
     <app-form-checkbox
